# pyfloatwriter

./: README.md  mat_writer.py  pywriter.py
libWriter/: CMakeLists.txt  libwriter_api.cpp  libwriter_api.h
